# ic-passkey-demo

./: Cargo.toml  Makefile  README.md  dfx.json  package-lock.json  package.json  webpack.config.js
src/passkey_demo_backend/: Cargo.toml  passkey_demo_backend.did
src/passkey_demo_backend/src/: lib.rs
src/passkey_demo_frontend/src/: index.html  index.js
