[package]
name = "passkey_demo_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.9.11"
ic-cdk = "0.11.3"
ic-cdk-macros = "0.8.1"
ic-certified-map = "0.4"
serde = "1.0.152"
serde_json = "1.0.93"
serde_bytes = "0.11.9"
sha2 = "^0.10"           # set bound to match ic-certified-map bound
passkey = "0.1.0"
coset = "0.3"
url = "2"
async-trait = "0.1"

rand = { version = "0.8", default-features = false }
rand_core = { version = "*", default-features = false }
rand_chacha = { version = "*", default-features = false }

[target.'cfg(all(target_arch = "wasm32", target_vendor = "unknown", target_os = "unknown"))'.dependencies]
getrandom = { version = "0.2", features = ["custom"] }
